--- a/src/styles.css
+++ b/src/styles.css
@@ -12,9 +12,229 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  /* background-image: url('./images/bg-pattern.png'); */
+  background-color: rgb(5, 77, 87);
+}
 
-  /*
-   * CSS image reference example.
-   */
-  background-image: url('./images/bg-pattern.png');
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+.main {
+  width: 1080px;
+  margin: auto;
+  padding-top: 40px;
+}
+
+.images-section {
+  position: relative;
+  text-align: center;
+  margin: auto;
+  margin-bottom: 30px;
+}
+
+.label {
+  display: block;
+  font-size: 32px;
+  font-weight: 900;
+  text-align: center;
+  color: #0de45f;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 30px;
+}
+
+input {
+  position: relative;
+  width: 100%;
+  padding: 12px 24px;
+
+  background-color: transparent;
+  transition: transform 250ms ease-in-out;
+  font-size: 18px;
+  line-height: 18px;
+  color: #4ae40d;
+  border-radius: 50px;
+  border: 2px solid white;
+  outline-style: none;
+
+  transition: all 250ms ease-in-out;
+}
+
+input::placeholder {
+  color: #4ae40d;
+}
+
+/* input:hover,
+input:focus {
+  padding: 12px 0;
+  outline: 0;
+  border: 1px solid transparent;
+  border-bottom: 2px solid #4ae40d;
+  border-radius: 0;
+} */
+
+.search-svg {
+  position: absolute;
+
+  fill: #ffffff;
+}
+
+.search-button {
+  position: absolute;
+  top: 79px;
+  right: 4px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  padding: 2px;
+  border-style: none;
+  background-color: #4ae40d;
+  outline-style: none;
+  transition: all 0.5s ease-in;
+}
+
+.search-button:hover,
+.search-button:focus {
+  background-color: #4ae40d;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.item-card {
+  position: relative;
+  width: calc((100% - 15px) / 4);
+  height: 266px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+
+  overflow: hidden;
+  transition: 1s;
+}
+.item-card:nth-last-child(-n + 4) {
+  margin-bottom: 0px;
+}
+
+.item-card:nth-child(4n) {
+  margin-right: 0px;
+}
+
+.item-card:hover,
+.item-card:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  transform: scale(1.05);
+  z-index: 50;
+}
+
+.photo-card {
+  height: inherit;
+  background-size: contain;
+}
+
+.photo-card img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  cursor: zoom-in;
+}
+
+.item-card:hover .stats,
+.item-card:focus .stats {
+  transform: translatey(216px);
+}
+
+.stats {
+  position: absolute;
+  display: flex;
+  bottom: 0;
+  justify-content: space-between;
+  width: 100%;
+  height: 50px;
+  min-width: 100%;
+  padding: 10px;
+  background: rgba(189, 189, 189, 0.4);
+
+  top: 0;
+  transform: translatey(266px);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.stats-item {
+  display: flex;
+  align-items: center;
+}
+
+.material-icons {
+  color: rgb(20, 20, 20);
+  font-size: 18px;
+}
+
+.loader {
+  margin: auto;
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #4ae40d;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.hide-loader {
+  display: none;
+}
+
+.lightbox-wrapper {
+  background-size: contain;
+}
+
+.scroll-up {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  color: #4ae40d;
+  background-color: transparent;
+  border-radius: 50%;
+  border-style: none;
+  outline-style: none;
+  width: 60px;
+  height: 60px;
+  padding: 0;
+  opacity: 0;
+  transition: all 0.5s ease-in;
+  z-index: 60;
+}
+
+.scroll-svg {
+  margin: auto;
+
+  width: 60px;
+  height: 60px;
+  fill: #88f110;
+}
+
+.scroll-up:hover {
+  background-color: #88f1109f;
+}
+
+.scroll-svg:hover {
+  fill: #ffffff;
 }
